--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,8 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.defer-datasource-initialization=true
 
+bca.api.url=https://sandbox.bca.co.id
+
 
 
 
