build : api info saldo hit to sandbox bca

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,12 @@ spring.application.name=finsera
 # Server port
 server.port=8080
 
-# DATABASE
-spring.datasource.url=jdbc:postgresql://localhost:5432/finsera
-spring.datasource.username=postgres
-spring.datasource.password=password
+# Database configuration
+spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?user=postgres.pwnoxumzoofipxbifckz&password=finSeraProject123
+spring.datasource.username=postgres.pwnoxumzoofipxbifckz
+spring.datasource.password=finSeraProject123
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
