build : login using mpin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.datasource.hikari.max-lifetime=2000000
 spring.datasource.hikari.connection-timeout=30000
 
 # JPA settings
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 debug=true
