--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=finsera
 server.port=8080
 
 # Database configuration
-spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?user=postgres.pwnoxumzoofipxbifckz&password=finSeraProject123
-spring.datasource.username=postgres.pwnoxumzoofipxbifckz
-spring.datasource.password=finSeraProject123
+spring.datasource.url=jdbc:postgresql://localhost:5432/finsera_db
+spring.datasource.username=postgres
+spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
