fix : create transaction and check account number

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=finsera
 server.port=8080
 
 # Database configuration
-spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?user=postgres.pwnoxumzoofipxbifckz&password=finSeraProject123
-spring.datasource.username=postgres.pwnoxumzoofipxbifckz
-spring.datasource.password=finSeraProject123
+spring.datasource.url=jdbc:postgresql://localhost:5432/final_project
+spring.datasource.username=postgres
+spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
@@ -19,15 +19,15 @@ spring.datasource.hikari.max-lifetime=2000000
 spring.datasource.hikari.connection-timeout=30000
 
 # JPA settings
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
-debug=true
+# debug=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual=true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.defer-datasource-initialization=true
-
+# spring.jpa.properties.hibernate.format_sql = true
+# spring.jpa.defer-datasource-initialization=true
+spring.jackson.property-naming-strategy: SNAKE_CASE
 
 
 
