--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=finsera
 server.port=8080
 
 # DATABASE
-spring.datasource.url=jdbc:postgresql://localhost:5432/finsera
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?user=postgres.pwnoxumzoofipxbifckz&password=finSeraProject123
+spring.datasource.username=postgres.pwnoxumzoofipxbifckz
+spring.datasource.password=finSeraProject123
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
