--- a/pom.xml
+++ b/pom.xml
@@ -105,13 +105,13 @@
 					<verbose>true</verbose>
 				</configuration>
 			</plugin>
-<!--			<plugin>-->
-<!--				<groupId>org.springframework.boot</groupId>-->
-<!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
-<!--				<configuration>-->
-<!--					<mainClass>com.finalproject.finsera.finsera.FinseraApplication</mainClass>-->
-<!--				</configuration>-->
-<!--			</plugin>-->
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>com.finalproject.finsera.finsera.FinseraApplication</mainClass>
+				</configuration>
+			</plugin>
 <!--			<plugin>-->
 <!--				<groupId>org.apache.maven.plugins</groupId>-->
 <!--				<artifactId>maven-jar-plugin</artifactId>-->
