--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ server.port=8080
 
 # Database configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/final_project
+# spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?user=postgres.usnsjigpzgsfukybnnkn&password=finalprojectbinar
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -25,8 +26,8 @@ spring.jpa.show-sql=true
 # debug=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual=true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-# spring.jpa.properties.hibernate.format_sql = true
-# spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.defer-datasource-initialization=true
 spring.jackson.property-naming-strategy: SNAKE_CASE
 
 
