build : feature mutasi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.profiles.active=dev
 server.port=8080
 
 # DATABASE
-spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?user=postgres.pwnoxumzoofipxbifckz&password=finSeraProject123
-spring.datasource.username=postgres.pwnoxumzoofipxbifckz
-spring.datasource.password=finSeraProject123
+spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?user=postgres.mywlcbdeaxoxvfhquiil&password=jdfzsEjqRR7Pf6rv
+spring.datasource.username=postgres.mywlcbdeaxoxvfhquiil
+spring.datasource.password=jdfzsEjqRR7Pf6rv
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
@@ -23,6 +23,8 @@ spring.datasource.hikari.connection-timeout=30000
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
+
+
 # debug=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual=true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
