--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,19 +5,17 @@ spring.profiles.active=dev
 server.port=8080
 
 # DATABASE
-spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?user=postgres.mywlcbdeaxoxvfhquiil&password=jdfzsEjqRR7Pf6rv
+spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?user=postgres.mywlcbdeaxoxvfhquiil&password=jdfzsEjqRR7Pf6rv?prepareThreshold=0
 spring.datasource.username=postgres.mywlcbdeaxoxvfhquiil
 spring.datasource.password=jdfzsEjqRR7Pf6rv
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
-# HikariCP settings
-spring.datasource.hikari.maximum-pool-size=15
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.pool-name=SpringBootSupabaseHikariCP
-spring.datasource.hikari.max-lifetime=2000000
+# HikariCP configuration
+spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
 
 # JPA settings
 spring.jpa.hibernate.ddl-auto=update
