--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,28 +2,28 @@ spring.application.name=finsera
 spring.profiles.active=dev
 
 # Server port
-server.port=8081
+server.port=8080
 
 # DATABASE
-spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?user=postgres.pwnoxumzoofipxbifckz&password=finSeraProject123
-spring.datasource.username=postgres.pwnoxumzoofipxbifckz
-spring.datasource.password=finSeraProject123
+spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?user=postgres.mywlcbdeaxoxvfhquiil&password=o7yfvLkaVJynSqtd
+spring.datasource.username=postgres.mywlcbdeaxoxvfhquiil
+spring.datasource.password=o7yfvLkaVJynSqtd
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
-# HikariCP configuration
-spring.datasource.hikari.maximum-pool-size=10
+# HikariCP settings
+spring.datasource.hikari.maximum-pool-size=15
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.pool-name=SpringBootSupabaseHikariCP
+spring.datasource.hikari.max-lifetime=2000000
 spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.idle-timeout=600000
-spring.datasource.hikari.max-lifetime=1800000
 
 # JPA settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
-
-
-# debug=true
+debug=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual=true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql = true
