--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=finsera
 spring.profiles.active=dev
-
-# Server port
-server.port=8080
+server.address=0.0.0.0
+server.port=80
 
 # DATABASE
 spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?user=postgres.mywlcbdeaxoxvfhquiil&password=o7yfvLkaVJynSqtd
