--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -44,4 +44,32 @@ jobs:
 
       - name: Push Docker image to DockerHub
         run: docker push fahrizalvianaz/finsera-api-staging:v1
+        
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Install sshpass
+        run: sudo apt-get install -y sshpass
 
+      - name: Set up SSH key
+        run: |
+          echo "$SSH_PRIVATE_KEY" > /tmp/id_rsa
+          chmod 600 /tmp/id_rsa
+          ssh-keyscan -H your-server-ip >> ~/.ssh/known_hosts
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Deploy to Server
+        run: |
+          sshpass -p "$SSH_PASSPHRASE" ssh -o StrictHostKeyChecking=no -i /tmp/id_rsa root@103.235.74.240 << 'EOF'
+            docker pull fahrizalvianaz/finsera-api-staging:v1
+            docker stop finsera-api || true
+            docker rm finsera-api || true
+            docker run -d --name finsera-api -p 8080:8080 fahrizalvianaz/finsera-api-staging:v1
+            sudo systemctl restart nginx
+          EOF
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
+        shell: bash
