--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -51,18 +51,12 @@ jobs:
     steps:
       - name: Install sshpass
         run: sudo apt-get install -y sshpass
-
-      - name: Set up SSH key
-        run: |
-          echo "$SSH_PRIVATE_KEY" > /tmp/id_rsa
-          chmod 600 /tmp/id_rsa
-          ssh-keyscan -H root@103.235.74.240 >> ~/.ssh/known_hosts
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Deploy to Server
         run: |
-          sshpass -p "$SSH_PASSPHRASE" ssh -o StrictHostKeyChecking=no -i /tmp/id_rsa root@103.235.74.240 << 'EOF'
+          sshpass -p "$SSH_PASSPHRASE" ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@103.235.74.240 << 'EOF'
             docker pull fahrizalvianaz/finsera-api-staging:v1
             docker stop finsera-api || true
             docker rm finsera-api || true
