--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -49,30 +49,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Install sshpass
-        run: sudo apt-get install -y sshpass
-      
-      - name: Set up SSH key
-        run: |
-          echo "$SSH_PRIVATE_KEY" > /tmp/id_rsa
-          chmod 600 /tmp/id_rsa
-          mkdir -p ~/.ssh
-          ssh-keyscan -H 103.235.74.240 >> ~/.ssh/known_hosts
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      - name: Start ssh-agent and add the key
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-          ssh-passphrase: ${{ secrets.SSH_PASSPHRASE }}
+      - name: Install dependencies
+        run: sudo apt-get update && sudo apt-get install -y sshpass
 
       - name: Deploy to Server
         run: |
-          ssh -o StrictHostKeyChecking=no root@103.235.74.240 << 'EOF'
+          sshpass -p "$SSH_PASSWORD" ssh -o StrictHostKeyChecking=no root@103.235.74.240 << 'EOF'
             docker pull fahrizalvianaz/finsera-api-staging:v1
             docker stop finsera-api || true
             docker rm finsera-api || true
             docker run -d --name finsera-api -p 8080:8080 fahrizalvianaz/finsera-api-staging:v1
             sudo systemctl restart nginx
           EOF
+        env:
+          SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
