--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.profiles.active=dev
 server.port=8080
 
 # DATABASE
-spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?user=postgres.mywlcbdeaxoxvfhquiil&password=o7yfvLkaVJynSqtd
-spring.datasource.username=postgres.mywlcbdeaxoxvfhquiil
-spring.datasource.password=o7yfvLkaVJynSqtd
+spring.datasource.url=jdbc:postgresql://localhost:5432/finsera
+spring.datasource.username=postgres
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
