fix : response jwt token expired

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.profiles.active=dev
 server.port=8080
 
 # DATABASE
-spring.datasource.url=jdbc:postgresql://localhost:5432/finsera
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://ep-flat-tree-a1eqpwk6.ap-southeast-1.aws.neon.tech/finsera?user=finsera_owner&password=bSD0lrLh3uOY&sslmode=require
+spring.datasource.username=finsera_owner
+spring.datasource.password=bSD0lrLh3uOY
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
