--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.profiles.active=dev
 server.port=8080
 
 # DATABASE
-spring.datasource.url=jdbc:postgresql://ep-flat-tree-a1eqpwk6.ap-southeast-1.aws.neon.tech/finsera?user=finsera_owner&password=bSD0lrLh3uOY&sslmode=require
-spring.datasource.username=finsera_owner
-spring.datasource.password=bSD0lrLh3uOY
+spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?user=postgres.knpzdaibzdqmqhrgwmgq&password=binarfudsynrgy7
+spring.datasource.username=postgres.knpzdaibzdqmqhrgwmgq
+spring.datasource.password=binarfudsynergy7
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
