add : download mutasi pdf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,11 @@ server.address=0.0.0.0
 server.port=8080
 
 # DATABASE
-spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?user=postgres.mywlcbdeaxoxvfhquiil&password=o7yfvLkaVJynSqtd
+spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?user=postgres.mywlcbdeaxoxvfhquiil&password=l76z5ZFyF6Jwtk3N
 spring.datasource.username=postgres.mywlcbdeaxoxvfhquiil
-spring.datasource.password=o7yfvLkaVJynSqtd
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.password=l76z5ZFyF6Jwtk3N
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
 # HikariCP settings
 #spring.datasource.hikari.maximum-pool-size=15
@@ -27,6 +27,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.datasource.hikari.data-source-properties.cachePrepStmts=false
+
 #spring.jpa.defer-datasource-initialization=true
 server.error.include-message=always
 
