--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,12 @@ server.address=0.0.0.0
 server.port=8080
 
 # DATABASE
-spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres
-spring.datasource.username=postgres.mywlcbdeaxoxvfhquiil
-spring.datasource.password=sa41VKlHyi0iiNhw
+#spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres
+#spring.datasource.username=postgres.mywlcbdeaxoxvfhquiil
+#spring.datasource.password=sa41VKlHyi0iiNhw
+spring.datasource.url=jdbc:postgresql://localhost:5432/finsera
+spring.datasource.username=postgres
+spring.datasource.password=password
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
