--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.address=0.0.0.0
 server.port=8080
 
 # DATABASE
-spring.datasource.url=jdbc:postgresql://roundhouse.proxy.rlwy.net:51749/railway
+spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?user=postgres.mywlcbdeaxoxvfhquiil&password=NFqB1tfjxSTvSTu7
 spring.datasource.username=postgres
-spring.datasource.password=FkcLlyNpTVXInmWuVzxcHAAalhFeRZXq
+spring.datasource.password=NFqB1tfjxSTvSTu7
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
