fix : response akun tidak aktif

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,12 @@ server.address=0.0.0.0
 server.port=8080
 
 # DATABASE
-spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?user=postgres.mywlcbdeaxoxvfhquiil&password=NFqB1tfjxSTvSTu7
-spring.datasource.username=postgres
-spring.datasource.password=NFqB1tfjxSTvSTu7
-#spring.datasource.url=jdbc:postgresql://localhost:5432/finsera
+#spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?user=postgres.mywlcbdeaxoxvfhquiil&password=NFqB1tfjxSTvSTu7
 #spring.datasource.username=postgres
-#spring.datasource.password=password
+#spring.datasource.password=NFqB1tfjxSTvSTu7
+spring.datasource.url=jdbc:postgresql://localhost:5432/finsera
+spring.datasource.username=postgres
+spring.datasource.password=password
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
